added the jar file to the docuer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
-ARG VARIANT=17-bullseye
+LABEL author="alla.kemelmakher@gmail.com"
+RG VARIANT=17-bullseye
 FROM mcr.microsoft.com/vscode/devcontainers/java:0-${VARIANT}
 
 ARG NODE_VERSION="none"
@@ -11,3 +12,5 @@ VOLUME /home/$USER/.gradle
 ARG JAVA_VERSION=17.0.7-ms
 RUN sudo mkdir /home/$USER/.m2 /home/$USER/.gradle && sudo chown $USER:$USER /home/$USER/.m2 /home/$USER/.gradle
 RUN bash -lc '. /usr/local/sdkman/bin/sdkman-init.sh && sdk install java $JAVA_VERSION && sdk use java $JAVA_VERSION'
+COPY /target/spring-petclinic-1.5.1.jar /home/spring-petclinic-1.5.1.jar 
+CMD ["java","-jar","/home/spring-petclinic-1.5.1.jar"]
