--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
-RG VARIANT=17-bullseye
+LABEL author="alla.kemelmakher@gmail.com"
+ARG VARIANT=17-bullseye
 FROM mcr.microsoft.com/vscode/devcontainers/java:0-${VARIANT}
 
 ARG NODE_VERSION="none"
